[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-saver"
version = "0.1.0"
description = "A lightweight, safe utility for TensorFlow/Keras that captures training artifacts and evaluation outputs."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "AhmedAbdAlKareem1" }]
dependencies = [
  "tensorflow>=2.10.1",
  "numpy",
  "scikit-learn",
]

[tool.setuptools]
package-dir = { "" = "experiment_saver_folder" }

[tool.setuptools.packages.find]
where = ["experiment_saver_folder"]
