[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-saver"
version = "0.1.0"
description = "A lightweight utility for TensorFlow/Keras to save training artifacts and evaluation metrics."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "AhmedAbdAlKareem1" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "tensorflow>=2.10.0",
  "numpy",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["experiment_saver*"]
