[project]
name = "experiment-saver"
version = "0.1.0"
description = "Lightweight local experiment saver for TensorFlow/Keras and PyTorch classification runs"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AhmedAbdAlKareem1" }]
requires-python = ">=3.8"
dependencies = [
  "numpy<2"
]

[project.optional-dependencies]
tf = ["tensorflow>=2.10"]
torch = ["torch", "torchvision"]

[project.urls]
Homepage = "https://github.com/AhmedAbdAlKareem1/experiment_saver"
Issues = "https://github.com/AhmedAbdAlKareem1/experiment_saver/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["experiment_saver"]
